--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,275 @@
-.App {
-  text-align: center;
+.background-container {
+  position: relative;
+  background-image: url("../Assets/background.svg");
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background-container::before {
+  content: "";
+  background-color: rgba(165, 112, 82, 0.97);
+  /* Background color with opacity */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+  /* Ensure the overlay is behind the content */
+}
+.inbackground{
+  position: absolute;
+  z-index: 2;
+}
+body {
+  background-color: #A57052;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fl {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 10%;
+  padding-bottom: 3%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fl2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8%;
+  padding-bottom: 0.5%;
+}
+.button{
+  cursor: pointer;
+}
+.outer{
+  display: flex;
+  justify-content: center;
+}
+.container {
   display: flex;
   flex-direction: column;
+  margin-top: 3%;
+  flex-shrink: 0;
+  width: 1067.999px;
+  height: 542px;
+  position: relative;
+}
+
+.in {
+  position: absolute;
+}
+
+.c2 {
+  display: flex;
+  padding:0;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.c3 {
+  display: flex;
+  padding: 0% 0px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.typ {
+  color: var(--lightest, #F8F2D8);
+  font-family: Jost;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+  margin: 0;
+}
+.dropdown-content{
+  padding: 0 2rem;
+}
+.ans {
+  color: var(--lightest, #F8F2D8);
+  font-family: Jost;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+  margin: 0;
+  padding-top: 1.2%;
+}
+
+.inside {
+  position: absolute;
+  width: 953px;
+  height: 474px;
+  padding-top: 7%;
+  padding-bottom: 8%;
+  padding-left: 5%;
+  padding-right: 4%;
+  margin-top: 2%;
+  overflow-y: auto;
+}
+
+.question-container {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 0.1px solid rgba(230, 214, 181, 0.9); /* Using RGBA color notation */
+  padding: 1.5% 0;
+  cursor: pointer;
+}
+.includeiso{
+  
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.abs{
+  position: absolute;
+  top: 30px;
+}
+#onefix{
+  top: 35px;
+}
+.mobile{
+  display: none;
+}
+@media(max-width:1200px){
+  #dabba{
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+  .inside{
+    width: 80%;
+  }
+  .container{
+    margin-left: 7%;
+  }
+  .typ {
+    font-size: 18px;
+  }
+  .ans{
+    font-size: 17px;
+  }
+}
+@media (max-width: 1067px) { 
+  .typ {
+    font-size: 17px;
+  }
+  .ans{
+    font-size: 16px;
+  }
+  .container{
+    width:84%;
+    height: 80%;
+    margin-left: 7%;
+  }
+  .inside{
+    width: 76%;
+    padding-left: 7%;
+    padding-right: 4%;
+    padding-top: 4%;
+  }
+  .fl2{
+    gap:4%;
+  }
+  #one{
+    height: 30px;
+    width: 180px;
+  }
+  #two{
+    height: 21px;
+    width: 145px;
+  }
+  #three{
+    height: 21px;
+    width: 105px;
+  }
+  #four{
+    height: 19px;
+    width: 165px;
+  }
+  .abs{
+    height: 10px;
+    width: 165px;
+    top:25px;
+  }
+  #onefix{
+    top:30px;
+  }
+  #dabba{
+    width: 90%;
+    height: 80%;
+  }
+  #star{
+    width: 12px;
+    height: 12px;
+  }
+  #arrow1{
+    width: 13px;
+    height: 15px;
+  }
+  #arrow2{
+    width: 15px;
+    height: 13px;
+  }
+}
+
+
+
+/* Font size for mobile screens */
+@media (max-width: 768px) {
+  .typ {
+    font-size: 16px;
+  }
+  .ans{
+    font-size: 15px;
+  }
+  .fl2{
+    padding-top: 5%;
+    flex-direction: column;
+    gap: 28px
+  }
+  
+  .inside{
+    display: none;
+  }
+  
+  #dabba{
+    display: none;
+  }
+  .includeiso{
+    width: 100%;
+  }
+  .mobile{
+    display: flex;
+    flex-direction: column;
+    margin-top: 8%;
+    width: 90%;
+  }
+  #star{
+    width: 11px;
+    height: 12px;
+  }
+  #arrow1{
+    width: 13px;
+    height: 15px;
+  }
+  #arrow2{
+    width: 15px;
+    height: 13px;
+  }
+  .faq{
+    width: 85px;
+  }
+  #faqtext{
+    width: 69px;
   }
 }
